--- a/templates/skeleton.html.twig
+++ b/templates/skeleton.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="has-navbar-fixed-top">
+<html{% if not login %} class="has-navbar-fixed-top"{% endif %}>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
